# Vision-OpenCV

./: CMakeLists.txt  README.md  augReal.cc  ecuImg.cc  unsharp.cc  vseg.cc
image_classification/: 02_SIFT_RESULTS.txt  02_SIFT_RESULTS_SVM.txt  02_SURF_RESULTS.txt  02_SURF_RESULTS_SVM.txt  10_SIFT_RESULTS.txt  10_SIFT_RESULTS_SVM.txt  10_SURF_RESULTS.txt  10_SURF_RESULTS_SVM.txt  CMakeLists.txt  README.txt  common_code.cpp  common_code.hpp  test_bovw.cpp  train_bovw.cpp
image_classification/models/: 02_SIFT_SVM_classifier.yml  02_SIFT_SVM_dictionary.yml  02_SIFT_classifier.yml  02_SIFT_dictionary.yml  02_SURF_classifier.yml  02_SURF_dictionary.yml  10_SIFT_SVM_classifier.yml  10_SIFT_SVM_dictionary.yml  10_SIFT_classifier.yml  10_SIFT_dictionary.yml  10_SURF_SVM_classifier.yml  10_SURF_SVM_dictionary.yml  10_SURF_classifier.yml  10_SURF_dictionary.yml
image_classification/src/: 02_SURF_SVM_classifier.yml  02_SURF_SVM_dictionary.yml  common_code.cpp  train_bovw.cpp
